--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,13 +4,9 @@
 @import "./components.css";
 @import "./utilities.css";
 @import "./layout.css";
-<<<<<<< Updated upstream
-/* @import "swiper/swiper-bundle.css"; */
-/* @layer base, components, utilities; */
-=======
 
 @layer base, components, utilities;
->>>>>>> Stashed changes
+
 /* @import 'swiper/css';
 @import 'swiper/css/navigation';
 @import 'swiper/css/pagination';  */
@@ -60,6 +56,7 @@
   --text-14: 14px;
   --text-15: 15px;
   --text-16: 16px;
+  --text-17: 17px;
   --text-18: 18px;
   --text-20: 20px;
   --text-22: 22px;
