Update lates Code

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -25,6 +25,7 @@
   /* fonts */
   --font-body:"Onest",sans-serif;
   --font-heading:"Plus Jakarta Sans",sans-serif;
+  --font-default:"roboto",sans-serif;
   --font-inherit:inherit;
   /* font-weight */
   --font-weight-inherit:inherit;
