--- a/assets/css/utilites_bottom.css
+++ b/assets/css/utilites_bottom.css
@@ -3,11 +3,11 @@
        BRANDS SECTION WRAPPERS
      =========================== */
 
-  .testimonial-section-main {
+  .our-brands-section-main {
     @apply w-full bg-[linear-gradient(180deg,#D82626_0%,#0055A4_52.4%,rgba(0,85,164,0)_100%)];
   }
 
-  .testimonial-inner-wrapper {
+  .our-brands-inner-wrapper {
     @apply max-w-[1679px] mx-auto px-16 sm:px-24 lg:px-40
            py-40 sm:py-56 lg:py-80
            flex flex-col gap-32 sm:gap-40;
