--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,8 +3,11 @@
 @import "./base.css";
 @import "./components.css";
 @import "./utilities.css";
+@import "./utilites_bottom.css";
 @import "./layout.css";
 @import "./testimonial.css";
+
+
 
 @layer base, components, utilities;
 
