--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,7 +3,7 @@
 @import "./base.css";
 @import "./components.css";
 @import "./utilities.css";
-@import "./utilites_bottom.css";
+/* @import "./utilites_bottom.css"; */
 @import "./layout.css";
 @import "./testimonial.css";
 
